# bun/packages/lockinspiel-frontend/src/openapi/auth.json
@@ -10,13 +10,14 @@
     "version": "0.1.0"
   },
   "paths": {
-    "/auth/login": {
+    "/auth/session": {
       "post": {
         "tags": [
-          "Users"
+          "Session"
         ],
-        "description": "Login to your account",
-        "operationId": "login",
+        "summary": "New session",
+        "description": "Creates a fresh session either via a username and password, or via a refresh token (which becomes invalidated after this request).",
+        "operationId": "new_session",
         "requestBody": {
           "content": {
             "application/json": {
@@ -24,8 +25,10 @@
                 "$ref": "#/components/schemas/Login"
               },
               "example": {
-                "password": "password",
-                "username": "johndoe"
+                "credentials": {
+                  "password": "password",
+                  "username": "johndoe"
+                }
               }
             }
           },
@@ -48,92 +51,7 @@
                   "$ref": "#/components/schemas/LoginToken"
                 },
                 "example": {
-                  "access_token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3NzgzNzUxMjcsInVzZXJfaWQiOiIwMDAwMDAwMC0wMDAwLTAwMDAtMDAwMC0wMDAwMDAwMDAwMDAiLCJ1c2VybmFtZSI6ImpvaG5kb2UiLCJyb2xlIjoidXNlciJ9.5k4aD5KNsQgCoTRdceEBq8huz49qOip0nFEBfGduZS8"
-                }
-              }
-            }
-          },
-          "4XX": {
-            "description": "It's your fault",
-            "content": {
-              "text/html": {
-                "schema": {
-                  "type": "string"
-                },
-                "example": "<!DOCTYPE html><html><head><meta charset=\"utf8\"></head><body><pre><code>\n   0: Example error\n\nLocation:\n   crates/lockinspiel-backend-common/src/error.rs:125\n\n  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n   0: lockinspiel_backend_common::error::placeholder\n      at crates/lockinspiel-backend-common/src/error.rs:121</code></pre></body></html>"
-              }
-            }
-          },
-          "5XX": {
-            "description": "We're having a skill issue",
-            "content": {
-              "text/html": {
-                "schema": {
-                  "type": "string"
-                },
-                "example": "<!DOCTYPE html><html><head><meta charset=\"utf8\"></head><body><pre><code>\n   0: Example error\n\nLocation:\n   crates/lockinspiel-backend-common/src/error.rs:125\n\n  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n   0: lockinspiel_backend_common::error::placeholder\n      at crates/lockinspiel-backend-common/src/error.rs:121</code></pre></body></html>"
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Users"
-        ],
-        "description": "Delete account",
-        "operationId": "delete_login",
-        "responses": {
-          "200": {
-            "description": "Ok"
-          },
-          "4XX": {
-            "description": "It's your fault",
-            "content": {
-              "text/html": {
-                "schema": {
-                  "type": "string"
-                },
-                "example": "<!DOCTYPE html><html><head><meta charset=\"utf8\"></head><body><pre><code>\n   0: Example error\n\nLocation:\n   crates/lockinspiel-backend-common/src/error.rs:125\n\n  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n   0: lockinspiel_backend_common::error::placeholder\n      at crates/lockinspiel-backend-common/src/error.rs:121</code></pre></body></html>"
-              }
-            }
-          },
-          "5XX": {
-            "description": "We're having a skill issue",
-            "content": {
-              "text/html": {
-                "schema": {
-                  "type": "string"
-                },
-                "example": "<!DOCTYPE html><html><head><meta charset=\"utf8\"></head><body><pre><code>\n   0: Example error\n\nLocation:\n   crates/lockinspiel-backend-common/src/error.rs:125\n\n  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n   0: lockinspiel_backend_common::error::placeholder\n      at crates/lockinspiel-backend-common/src/error.rs:121</code></pre></body></html>"
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "bearer_jwt": []
-          }
-        ]
-      }
-    },
-    "/auth/refresh": {
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "description": "Exchanges a refresh token for a new access token",
-        "operationId": "refresh",
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/LoginToken"
-                },
-                "example": {
-                  "access_token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3NzgzNzUxMjcsInVzZXJfaWQiOiIwMDAwMDAwMC0wMDAwLTAwMDAtMDAwMC0wMDAwMDAwMDAwMDAiLCJ1c2VybmFtZSI6ImpvaG5kb2UiLCJyb2xlIjoidXNlciJ9.5k4aD5KNsQgCoTRdceEBq8huz49qOip0nFEBfGduZS8"
+                  "access_token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3NzgzOTM4NzgsInVzZXJfaWQiOiIwMDAwMDAwMC0wMDAwLTAwMDAtMDAwMC0wMDAwMDAwMDAwMDAiLCJ1c2VybmFtZSI6ImpvaG5kb2UiLCJyb2xlIjoidXNlciJ9.-x_L0qoXbB-Tykwam3IFClp2yPR1LZK5W9z7faOXYTE"
                 }
               }
             }
@@ -164,16 +82,77 @@
         "security": [
           {
             "refresh_cookie": []
+          },
+          {}
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Session"
+        ],
+        "summary": "Logout",
+        "description": "Logs out of the currently authenticated user (invalidates the current session)",
+        "operationId": "logout",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "headers": {
+              "Set-Cookie": {
+                "schema": {
+                  "type": "string"
+                },
+                "description": "An HTTP-Only cookie called `lockinspiel_refresh` will contain the refresh token."
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LoginToken"
+                },
+                "example": {
+                  "access_token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3NzgzOTM4NzgsInVzZXJfaWQiOiIwMDAwMDAwMC0wMDAwLTAwMDAtMDAwMC0wMDAwMDAwMDAwMDAiLCJ1c2VybmFtZSI6ImpvaG5kb2UiLCJyb2xlIjoidXNlciJ9.-x_L0qoXbB-Tykwam3IFClp2yPR1LZK5W9z7faOXYTE"
+                }
+              }
+            }
+          },
+          "4XX": {
+            "description": "It's your fault",
+            "content": {
+              "text/html": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "<!DOCTYPE html><html><head><meta charset=\"utf8\"></head><body><pre><code>\n   0: Example error\n\nLocation:\n   crates/lockinspiel-backend-common/src/error.rs:125\n\n  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n   0: lockinspiel_backend_common::error::placeholder\n      at crates/lockinspiel-backend-common/src/error.rs:121</code></pre></body></html>"
+              }
+            }
+          },
+          "5XX": {
+            "description": "We're having a skill issue",
+            "content": {
+              "text/html": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "<!DOCTYPE html><html><head><meta charset=\"utf8\"></head><body><pre><code>\n   0: Example error\n\nLocation:\n   crates/lockinspiel-backend-common/src/error.rs:125\n\n  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n   0: lockinspiel_backend_common::error::placeholder\n      at crates/lockinspiel-backend-common/src/error.rs:121</code></pre></body></html>"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearer_jwt": [],
+            "refresh_cookie": []
           }
         ]
       }
     },
-    "/auth/signup": {
+    "/auth/user": {
       "post": {
         "tags": [
-          "Users"
+          "User"
         ],
-        "description": "Create a new account",
+        "summary": "Create account",
+        "description": "Creates a new account with a username and passsword",
         "operationId": "signup",
         "requestBody": {
           "content": {
@@ -206,7 +185,7 @@
                   "$ref": "#/components/schemas/LoginToken"
                 },
                 "example": {
-                  "access_token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3NzgzNzUxMjcsInVzZXJfaWQiOiIwMDAwMDAwMC0wMDAwLTAwMDAtMDAwMC0wMDAwMDAwMDAwMDAiLCJ1c2VybmFtZSI6ImpvaG5kb2UiLCJyb2xlIjoidXNlciJ9.5k4aD5KNsQgCoTRdceEBq8huz49qOip0nFEBfGduZS8"
+                  "access_token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3NzgzOTM4NzgsInVzZXJfaWQiOiIwMDAwMDAwMC0wMDAwLTAwMDAtMDAwMC0wMDAwMDAwMDAwMDAiLCJ1c2VybmFtZSI6ImpvaG5kb2UiLCJyb2xlIjoidXNlciJ9.-x_L0qoXbB-Tykwam3IFClp2yPR1LZK5W9z7faOXYTE"
                 }
               }
             }
@@ -234,6 +213,46 @@
             }
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Delete account",
+        "description": "Deletes the account of the currently authenticated user.",
+        "operationId": "delete_user",
+        "responses": {
+          "200": {
+            "description": "Ok"
+          },
+          "4XX": {
+            "description": "It's your fault",
+            "content": {
+              "text/html": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "<!DOCTYPE html><html><head><meta charset=\"utf8\"></head><body><pre><code>\n   0: Example error\n\nLocation:\n   crates/lockinspiel-backend-common/src/error.rs:125\n\n  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n   0: lockinspiel_backend_common::error::placeholder\n      at crates/lockinspiel-backend-common/src/error.rs:121</code></pre></body></html>"
+              }
+            }
+          },
+          "5XX": {
+            "description": "We're having a skill issue",
+            "content": {
+              "text/html": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "<!DOCTYPE html><html><head><meta charset=\"utf8\"></head><body><pre><code>\n   0: Example error\n\nLocation:\n   crates/lockinspiel-backend-common/src/error.rs:125\n\n  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n   0: lockinspiel_backend_common::error::placeholder\n      at crates/lockinspiel-backend-common/src/error.rs:121</code></pre></body></html>"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearer_jwt": []
+          }
+        ]
       }
     }
   },
@@ -269,19 +288,51 @@
         ]
       },
       "Login": {
-        "type": "object",
-        "required": [
-          "username",
-          "password"
-        ],
-        "properties": {
-          "password": {
-            "type": "string"
+        "oneOf": [
+          {
+            "type": "object",
+            "required": [
+              "credentials"
+            ],
+            "properties": {
+              "credentials": {
+                "type": "object",
+                "required": [
+                  "username",
+                  "password"
+                ],
+                "properties": {
+                  "password": {
+                    "type": "string"
+                  },
+                  "username": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
           },
-          "username": {
-            "type": "string"
+          {
+            "type": "object",
+            "required": [
+              "refresh_token"
+            ],
+            "properties": {
+              "refresh_token": {
+                "type": "object",
+                "properties": {
+                  "token": {
+                    "type": [
+                      "string",
+                      "null"
+                    ],
+                    "description": "If the refresh token is null, it's assumed that the token\nwill be provided via a cookie"
+                  }
+                }
+              }
+            }
           }
-        }
+        ]
       },
       "LoginToken": {
         "type": "object",
